--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "name": "Launch Main",
       "request": "launch",
       "mainClass": "main.Main",
-      "projectName": "PREBET-UTM"
+      "projectName": "PREBET-UTM_31ccb941"
     }
   ]
 }
